[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/gametest.gd" type="Script" id=1]
[ext_resource path="res://Sprites/PNG-cards-1.3/dack.png" type="Texture" id=2]
[ext_resource path="res://Sounds/cardSlide7.wav" type="AudioStream" id=3]

[sub_resource type="NavigationPolygon" id=1]

vertices = PoolVector2Array( -29.8836, -15.9686, 2068.61, -14.9997, 2068.61, 632.973, -32.4023, 633.054 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -29.8836, -15.9686, 2068.61, -14.9997, 2068.61, 632.973, -32.4023, 633.054 ) ]

[node name="main" type="Node"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_horizontal_guides_": [ 365.0, 263.489 ],
"_edit_vertical_guides_": [ 68.0721 ]
}

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -411.0
margin_top = -198.0
margin_right = 1477.0
margin_bottom = 886.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.194778, 0.449219, 0.198754, 1 )

[node name="baralho" type="Sprite" parent="." index="1"]

position = Vector2( 910, 130 )
scale = Vector2( 0.27, 0.24 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Deck" type="Node" parent="." index="2"]

[node name="mao_jogador" type="Node" parent="." index="3"]

[node name="mao_mesa" type="Node" parent="." index="4"]

[node name="Audio" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = -27.12
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="valor1" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 131.0
margin_top = 74.0
margin_right = 242.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "valor das cartas : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="valor2" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 131.0
margin_top = 388.0
margin_right = 242.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "valor das cartas : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mesa" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 248.0
margin_top = 74.0
margin_right = 359.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="jogador" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 248.0
margin_top = 388.0
margin_right = 359.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 166.0
margin_top = 235.0
margin_right = 206.0
margin_bottom = 249.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="aposta" type="LineEdit" parent="." index="11"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 638.0
margin_top = 239.0
margin_right = 696.0
margin_bottom = 263.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Rect" ]

[node name="valor_aposta" type="Label" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 636.0
margin_top = 380.0
margin_right = 676.0
margin_bottom = 394.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="dinheiro_jogador" type="Label" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 380.0
margin_right = 69.0
margin_bottom = 394.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="dinheiro_mesa" type="Label" parent="." index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_top = 67.0
margin_right = 68.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Timer" type="Timer" parent="." index="15"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Navigation" type="Navigation2D" parent="." index="16"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation" index="0"]

position = Vector2( -648.398, -599.86 )
scale = Vector2( 2.42875, 3.11392 )
navpoly = SubResource( 1 )
enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


